nowhere, inesc, evasion
added change to nowhere to hide to interact with the new cover rules, added feedback to inescapable attack, made it so rerolling evasion doesnt increment the active effect

--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -59,7 +59,7 @@
         <div class=" flex-group-center">
             <label class="resource-label">{{skill.name}}</label>
             <div class="resource-content flexrow flex-center flex-between">
-                <span class="char-total rollable button" data-roll-type="skill" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
+                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
             </div>
         </div>
         {{/if}}
@@ -67,7 +67,7 @@
         <div class="flex-group-center">
             <label class="resource-label">{{skill.name}}</label>
             <div class="resource-content flexrow flex-center flex-between">
-                <span class="char-total rollable button" data-roll-type="skill" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
+                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{skill.data.total.value}}" data-label="{{skill.name}}" data-char="{{skill.data.characteristic.value}}" >{{skill.data.total.value}}</span>
             </div>
         </div>
         {{/if}}
