--- a/templates/actor/actor-npc-sheet.html
+++ b/templates/actor/actor-npc-sheet.html
@@ -83,8 +83,8 @@
                     </div>
                 </div>
                 <div class="resource flexcol">
-                    <span class="char-total rollable button" data-roll-type="skill" data-target="{{data.parry.total}}" data-label="Parry" data-char="ws" >Parry</span>
-                    <span class="char-total rollable button" data-roll-type="skill" data-target="{{data.dodge.total}}" data-label="Dodge" data-char="agi" >Dodge</span>
+                    <span class="char-total rollable button" data-roll-type="evasion" data-target="{{data.parry.total}}" data-label="Parry" data-char="ws" >Parry</span>
+                    <span class="char-total rollable button" data-roll-type="evasion" data-target="{{data.dodge.total}}" data-label="Dodge" data-char="agi" >Dodge</span>
                 </div>
             </div>
         </div>
