--- a/templates/chat/chat-test.html
+++ b/templates/chat/chat-test.html
@@ -21,6 +21,9 @@
         {{#if sizePenalty}}
         <span class="chat-line">{{sizePenalty}}</span>
         {{/if}}
+        {{#if inescapableAttack}}
+        <span class="chat-line">{{inescapableAttack}}</span>
+        {{/if}}
     </div>
 
     {{#unless reroll}}
