--- a/css/fortyk.css
+++ b/css/fortyk.css
@@ -929,6 +929,9 @@
     display:flex;
     flex-direction: row;
     justify-content: space-between;
+    border-bottom: dashed;
+    border-bottom-width: 1px;
+    border-bottom-color: darkgray;
 }
 .cadetHouse-img{
     height:75px;
