--- a/templates/actor/dialogs/ranged-attack-dialog.html
+++ b/templates/actor/dialogs/ranged-attack-dialog.html
@@ -180,5 +180,8 @@
     </div>
 
 </div>
+<div class="flexcol">
+    <label class="section-title">Misc Modifiers: {{#if (greaterThan modifiers.miscMods -1)}}+{{/if}}{{modifiers.miscMods}}</label>
 <label class="section-title">Other Modifiers</label>
 <input type="text" id="modifier" name="other" value="{{modifiers.testMod}}">
+</div>
