--- a/templates/item/item-knightChassis-sheet.html
+++ b/templates/item/item-knightChassis-sheet.html
@@ -36,6 +36,10 @@
         <input type="text" value="{{data.manoeuvrability.value}}" name="data.manoeuvrability.value">
     </div>
     <div class="flexcol">
+        <label>Size:</label>
+        <input type="text" value="{{data.size.value}}" name="data.size.value">
+    </div>
+    <div class="flexcol">
         <label>Carapace Hard points:</label>
         <label>Titanic Artillery</label>
         <input type="text" class="knight-Hardpoint" value="{{data.hardPoints.carapace.titanicArtillery.length}}" data-location="carapace" data-type="titanicArtillery">
