--- a/templates/actor/knightParts/mech-bay.html
+++ b/templates/actor/knightParts/mech-bay.html
@@ -391,10 +391,10 @@
                     {{#if ../isGM}}
                     <a class="list-button item-edit" title="Edit" data-item-id="{{this.id}}"></a>
                     {{/if}}
-                    <a class="list-button delete-weapon" title="Delete" data-item-id="{{this.id}}" data-path="data.hardPoints.leftArm.auxiliary" data-index="{{@index}}"></a>
+                    <a class="list-button delete-weapon" title="Delete" data-item-id="{{this.id}}" data-path="data.hardPoints.carapace.auxiliary" data-index="{{@index}}"></a>
                 </div>
                 {{else}}
-                <div class="auxiliary-slot auxiliary component-slot"  data-facing="lSide" data-index="{{@index}}" data-path="data.hardPoints.leftArm.auxiliary">
+                <div class="auxiliary-slot auxiliary component-slot"  data-facing="lSide" data-index="{{@index}}" data-path="data.hardPoints.carapace.auxiliary">
                     Auxiliary Slot
                 </div>
                 {{/if}}
