--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -239,7 +239,7 @@
 
                 <div class="list-item">
                     <span>Attack: </span> 
-                    {{#if (greaterThan this.data.data.clip.value 0)}}
+                    {{#if (greaterThan this.system.clip.value 0)}}
                     <span class="ranged-attack rollable button" data-roll-type="rangedAttack" data-target="{{../data.characteristics.bs.total}}" data-item-id="{{this.id}}" data-label="Ranged Attack" data-char="bs">Roll</span>
                     {{else}}
                     <span class="weapon-reload button" data-weapon="{{this.id}}" >Reload</span>
@@ -247,7 +247,7 @@
                 </div>
                 <div class="list-item">
                     <span>Damage: </span> 
-                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.data.damageFormula.value}}" data-weapon="{{this.id}}"> {{this.data.data.damageFormula.value}}</a>
+                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.system.damageFormula.value}}" data-weapon="{{this.id}}"> {{this.system.damageFormula.value}}</a>
 
                 </div>
                 {{#if this.data.flags.fortyk.force}}
@@ -283,18 +283,18 @@
                 </div>
                 {{/if}}
 
-                {{#unless (contains this.data.data.class.value "thrown")}}
+                {{#unless (contains this.system.class.value "thrown")}}
                 <div class="list-item ammo-list">
 
                     <label>Current Ammo:</label>
-                    <select class="weapon-ammo" data-weapon="{{this.id}}" data-previous="{{this.data.data.ammo._id}}">
+                    <select class="weapon-ammo" data-weapon="{{this.id}}" data-previous="{{this.system.ammo._id}}">
 
-                        {{#select this.data.data.ammo._id}}
+                        {{#select this.system.ammo._id}}
                         <option value="">None</option>
 
                         {{#each ../actor.equippableAmmo}}
-                        {{#if (compareString this.data.class.value ../this.data.data.class.value)}}
-                        {{#if (compareString this.data.type.value ../this.data.data.type.value)}}
+                        {{#if (compareString this.data.class.value ../this.system.class.value)}}
+                        {{#if (compareString this.data.type.value ../this.system.type.value)}}
                         <option value="{{this._id}}">{{this.name}}:{{this.data.amount.value}}</option>
                         {{/if}}
                         {{/if}}
@@ -305,7 +305,7 @@
                 </div>
                 {{else}}
                 <div class="list-item">
-                    <span>Amount: {{this.data.data.amount.value}}</span> 
+                    <span>Amount: {{this.system.amount.value}}</span> 
 
 
                 </div>
@@ -313,24 +313,24 @@
                 <div class="list-item flexrow">
                     <span>Current Clip: </span>
 
-                    <input class="item-text-input" type="text" data-target="data.clip.value"  value="{{this.data.data.clip.value}}" data-item-id="{{this.id}}" data-dtype="Number">
+                    <input class="item-text-input" type="text" data-target="data.clip.value"  value="{{this.system.clip.value}}" data-item-id="{{this.id}}" data-dtype="Number">
                     <span> / </span>
-                    <span>{{this.data.data.clip.max}}</span>
+                    <span>{{this.system.clip.max}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Range: {{this.data.data.range.value}}m</span>
+                    <span>Range: {{this.system.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{this.data.data.pen.value}}</span>
+                    <span>Penetration: {{this.system.pen.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <label>Rate of Fire: {{this.data.data.rof.[0].value}}/{{this.data.data.rof.[1].value}}/{{this.data.data.rof.[2].value}}</label>
+                    <label>Rate of Fire: {{this.system.rof.[0].value}}/{{this.system.rof.[1].value}}/{{this.system.rof.[2].value}}</label>
                 </div>
                 <div class="list-item">
-                    <span>Reload: {{this.data.data.reload.value}}</span>
+                    <span>Reload: {{this.system.reload.value}}</span>
 
                 </div>
                 <div class="list-item">
@@ -350,16 +350,16 @@
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{this.data.data.damageType.value}}</span>
+                    <span>Damage Type: {{this.system.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{this.data.data.class.value}}</span>
+                    <span>Weapon Class: {{this.system.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{this.data.data.type.value}}</span>
+                    <span>Weapon Type: {{this.system.type.value}}</span>
 
 
                 </div>
@@ -379,7 +379,7 @@
                 </div>
                 <div class="list-item">
                     <span>Damage: </span>
-                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.data.data.damageFormula.value}}" data-weapon="{{this.id}}"> {{this.data.data.damageFormula.value}}</a>
+                    <a class="damage-roll button" data-label="{{this.name}}"data-formula="{{this.system.damageFormula.value}}" data-weapon="{{this.id}}"> {{this.system.damageFormula.value}}</a>
                 </div>
                 {{#if this.data.flags.fortyk.force}}
                 <div class="list-item">
@@ -390,10 +390,10 @@
                 </div>
                 {{/if}}
                 <div class="list-item">
-                    <span>Reach: {{this.data.data.range.value}}m</span>
+                    <span>Reach: {{this.system.range.value}}m</span>
                 </div>
                 <div class="list-item">
-                    <span>Penetration: {{this.data.data.pen.value}}</span>
+                    <span>Penetration: {{this.system.pen.value}}</span>
 
                 </div>
                 <div class="list-item">
@@ -412,16 +412,16 @@
 
                 </div>
                 <div class="list-item">
-                    <span>Damage Type: {{this.data.data.damageType.value}}</span>
+                    <span>Damage Type: {{this.system.damageType.value}}</span>
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Class: {{this.data.data.class.value}}</span>
+                    <span>Weapon Class: {{this.system.class.value}}</span>
 
 
                 </div>
                 <div class="list-item">
-                    <span>Weapon Type: {{this.data.data.type.value}}</span>
+                    <span>Weapon Type: {{this.system.type.value}}</span>
                 </div>
 
             </div>
