--- a/templates/actor/dialogs/spendExp-dialog-parts/talent.html
+++ b/templates/actor/dialogs/spendExp-dialog-parts/talent.html
@@ -9,13 +9,13 @@
         <span class="tntdescr tntheaderitem">Descr</span>
        
         {{#each talents}}
-            <div class="tntitem" name="tntEntry" data-search="{{this.name}}{{this.data.data.tags.value}}{{this.data.data.aptitudes.value}}"><input type="radio" class="tntcheckbox" name="talent-choice"  data-compendium="{{pack}}" value="{{this.id}}"></div>
+            <div class="tntitem" name="tntEntry" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}"><input type="radio" class="tntcheckbox" name="talent-choice"  data-compendium="{{pack}}" value="{{this.id}}"></div>
             
-            <span name="tntEntry" class="tntname tntitem" data-search="{{this.name}}{{this.data.data.tags.value}}{{this.data.data.aptitudes.value}}">{{this.name}}</span>
-         <span name="tntEntry" class="tntprereqs tntitem" data-search="{{this.name}}{{this.data.data.tags.value}}{{this.data.data.aptitudes.value}}">{{this.data.data.prereqs.value}}</span>
-            <span name="tntEntry"  class="tnttier tntitem" data-search="{{this.name}}{{this.data.data.tags.value}}{{this.data.data.aptitudes.value}}">{{this.data.data.tier.value}}</span>
-            <span name="tntEntry" class="tntaptitudes tntitem" data-search="{{this.name}}{{this.data.data.tags.value}}{{this.data.data.aptitudes.value}}">{{this.data.data.aptitudes.value}}</span>
-            <a name="tntEntry" class="tntdescr tntitem tntdescr-button" class="tnt-desscription" data-name="{{this.name}}" data-description="{{this.data.data.description.value}}" data-search="{{this.name}}{{this.data.data.tags.value}}{{this.data.data.aptitudes.value}}">Descr</a>
+            <span name="tntEntry" class="tntname tntitem" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}">{{this.name}}</span>
+         <span name="tntEntry" class="tntprereqs tntitem" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}">{{this.system.prereqs.value}}</span>
+            <span name="tntEntry"  class="tnttier tntitem" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}">{{this.system.tier.value}}</span>
+            <span name="tntEntry" class="tntaptitudes tntitem" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}">{{this.system.aptitudes.value}}</span>
+            <a name="tntEntry" class="tntdescr tntitem tntdescr-button" class="tnt-desscription" data-name="{{this.name}}" data-description="{{this.system.description.value}}" data-search="{{this.name}}{{this.system.tags.value}}{{this.system.aptitudes.value}}">Descr</a>
         
 
 
