--- a/templates/item/item-skill-sheet.html
+++ b/templates/item/item-skill-sheet.html
@@ -17,7 +17,7 @@
                 {{#each skillgroups as |skill key|}}
                 
                 
-                <option class="new-skill-select" value="{{skill.system.name}}">{{skill.system.name}}</option>
+                <option class="new-skill-select" value="{{skill.name}}">{{skill.name}}</option>
                 
                 {{/each}}
                 {{/select}}
