--- a/templates/actor/vehicle-sheet.html
+++ b/templates/actor/vehicle-sheet.html
@@ -290,7 +290,7 @@
                     <input type="text" class="combat-resources" data-target="system.crew.capacity" value="{{system.crew.capacity}}" data-dtype="String"/>
                     <div class="flexcol">
                         <div class="descrRow flexcol">
-                                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.rating}}" data-label="Jink" data-char="">Jink</span>
+                                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.ratingTotal}}" data-label="Jink" data-char="">Jink</span>
 
 
                             </div>
