--- a/templates/actor/knightParts/combat.html
+++ b/templates/actor/knightParts/combat.html
@@ -79,7 +79,7 @@
 
             <div class="descrRow flexcol">
                 <span class="descrSpan">Jink:</span>
-                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.rating}}" data-label="Jink" data-char="">{{system.crew.rating}}</span>
+                <span class="char-total rollable button" data-roll-type="evasion" data-target="{{system.crew.jink}}" data-label="Jink" data-char="">{{system.crew.rating}}</span>
 
 
             </div>
