--- a/templates/item/item-psychicPower-sheet.html
+++ b/templates/item/item-psychicPower-sheet.html
@@ -65,6 +65,10 @@
             <input type="text" value="{{system.reqs.value}}" name="system.reqs.value">
         </div>
         <div class="flexcol">
+            <label>Cost:</label>
+            <input type="text" value="{{system.cost.value}}" name="system.cost.value">
+        </div>
+        <div class="flexcol">
             <label>Range:</label>
             <input type="text" value="{{system.range.formula}}" name="system.range.formula">
         </div>
